// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`QuestionsHeader parentPage === feed 1`] = `
<div>
  <div
    className="questions-header"
  >
    <h4
      className="text-uppercase font-weight-bold"
    >
      : 0
    </h4>
    <div>
      <button
        className="btn btn-secondary ml-1"
        onClick={[Function]}
      />
      <FollowCommunityButton
        followedCommunities={Array []}
        translations={Object {}}
      />
    </div>
  </div>
  <SelectField
    input={
      Object {
        "onChange": [Function],
        "value": undefined,
      }
    }
    isClearable={false}
    isDisabled={false}
    isMulti={false}
    isSearchable={true}
    options={
      Array [
        Object {
          "label": undefined,
          "value": 0,
        },
      ]
    }
  />
</div>
`;

exports[`QuestionsHeader snapshot test 1`] = `
<div>
  <div
    className="questions-header"
  >
    <h4
      className="text-uppercase font-weight-bold"
    >
      : 0
    </h4>
    <div>
      <button
        className="btn btn-secondary ml-1"
        onClick={[Function]}
      />
      <FollowCommunityButton
        translations={Object {}}
      />
    </div>
  </div>
  <SelectField
    input={
      Object {
        "onChange": [Function],
        "value": undefined,
      }
    }
    isClearable={false}
    isDisabled={false}
    isMulti={false}
    isSearchable={true}
    options={
      Array [
        Object {
          "label": undefined,
          "value": 0,
        },
      ]
    }
  />
</div>
`;
